# CDO-Utility-Local-UUID

./: .gitignore  CONTRIBUTE.md  Makefile  README.md  code.yaml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: cicd.yml  prerelease.yml
cdo_local_uuid/: __init__.py
tests/: Makefile  README.md
tests/relativity_to_venv/: Makefile  README.md  editability_x.mk  editability_x_dir_1.mk  test_outputs.py
tests/relativity_to_venv/editability_no/: Makefile
tests/relativity_to_venv/editability_yes/: Makefile  setup.cfg
tests/relativity_to_venv/editability_yes/cdo_example_command/: __init__.py
tests/relativity_to_venv/editability_yes/dir_1/: Makefile
tests/varying_top_srcdir/: Makefile  README.md  project_x.mk  project_x_dir_y.mk  test_outputs.py
tests/varying_top_srcdir/project_1/dir_2/: Makefile
tests/varying_top_srcdir/project_2/: Makefile
tests/varying_top_srcdir/project_2/dir_1/: Makefile  example.py
