[metadata]
name = cdo-example-command
version = 0.0.1
author = Example Developer
author_email = test@example.org
description = Test project
classifiers =
    Development Status :: 1 - Planning
    Operating System :: OS Independent
    Private :: Do Not Upload
    Programming Language :: Python :: 3
# Usage of the classifier 'Private :: Do Not Upload' is to confirm that
# the package configuration for cdo-local-uuid is ignoring this test
# project.  If it's picked up, PyPI will reject the package, per:
# https://pypi.org/classifiers/

[options]
include_package_data = true
packages = find:
install_requires =
    cdo_local_uuid

[options.entry_points]
console_scripts =
    cdo_example_command = cdo_example_command:main

[options.package_data]
cdo_example_command = py.typed
